# summa

./: CMakeLists.txt  main.cpp  summa.cpp  summa.h  utils.cpp  utils.h
